Add font awesome

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -43,3 +43,6 @@
  * @import "utilities/background-patterns";
  * @import "utilities/skew-transforms";
  */
+
+$fa-font-path: "~font-awesome/fonts";
+@import "~font-awesome/scss/font-awesome";
