Add Timeline css

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -23,6 +23,8 @@
  * @import "components/forms";
  */
 
+@import "_timeline.scss";
+
 /**
  * This injects all of Tailwind's utility classes, generated based on your
  * config file.
