Add darker color on hover to timeline

--- a/src/styles/_timeline.scss
+++ b/src/styles/_timeline.scss
@@ -56,6 +56,11 @@
   }
 }
 
+.timeline-item:not(.period):hover .timeline-info,
+.timeline-item:not(.period):hover .timeline-content {
+  @apply .text-grey-darkest;
+}
+
 .timeline-split {
   @screen sm {
     .timeline {
