--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -51,4 +51,5 @@
 @import "~font-awesome/scss/font-awesome";
 @import "~animate.css/animate.css";
 
+@import "_animations.scss";
 @import "_shame.scss";
