--- a/src/styles/_shame.scss
+++ b/src/styles/_shame.scss
@@ -1,8 +1,8 @@
 .developmint {
-  color: $devleopmint-green;
+  color: $developmint-green;
 
   &:hover {
-    color: darken($devleopmint-green, 5%);
+    color: darken($developmint-green, 5%);
     text-decoration: underline;
   }
 }
