Add animation to rating and make components functional
Resolves #16

--- a/assets/styles/_shame.scss
+++ b/assets/styles/_shame.scss
@@ -11,17 +11,15 @@
   position: sticky;
 }
 
-$durations: (.5, 1, 2, 5, 10);
-
-@mixin generate-animation-durations() {
-  @each $duration in $durations {
-    .animation-duration-#{$duration} {
-      animation-duration: #{$duration}s;
-    }
+@variants hover, group-hover {
+  .rotate-45 {
+    transform: rotate(45deg);
   }
 }
 
-@include generate-animation-durations();
+.transition-all-300 {
+  transition: all .3s;
+}
 
 //Height fix for anchors
 
