refactor: moving some css around again

--- a/assets/styles/_shame.scss
+++ b/assets/styles/_shame.scss
@@ -7,10 +7,6 @@
   }
 }
 
-.sticky {
-  position: sticky;
-}
-
 @variants hover, group-hover {
   .rotate-45 {
     transform: rotate(45deg);
@@ -25,4 +21,31 @@
 
 a[id] {
   @apply .-mt-8 .pt-8;
+}
+
+
+/*
+ * Adapted from animate.css (https://github.com/daneden/animate.css/)
+ */
+
+.animated {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  &.infinite {
+    animation-iteration-count: infinite;
+  }
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+  animation-name: fade-in;
 }
