refactor: ditch sass for postcss (#26)

--- a/assets/styles/shame.pcss
+++ b/assets/styles/shame.pcss
@@ -1,15 +1,3 @@
-// Colors
-$developmint-green: #199922;
-
-.developmint {
-  color: darken($developmint-green, 5%);
-  text-decoration: none;
-
-  &:hover {
-    text-decoration: underline;
-  }
-}
-
 @variants hover, group-hover {
   .rotate-45 {
     transform: rotate(45deg);
@@ -20,7 +8,7 @@ $developmint-green: #199922;
   transition: all .3s;
 }
 
-//Height fix for anchors
+/* Height fix for anchors */
 
 a[id] {
   @apply .-mt-8 .pt-8;
