--- a/assets/styles/shame.pcss
+++ b/assets/styles/shame.pcss
@@ -40,3 +40,10 @@ a[id] {
 .fade-in {
   animation-name: fade-in;
 }
+
+
+@variants hover, group-hover {
+  .rotate-45 {
+    transform: rotate(45deg);
+  }
+}
