feat: rework CSS
Apply newest tailwind features
Improve anchor issues

--- a/assets/styles/shame.pcss
+++ b/assets/styles/shame.pcss
@@ -1,19 +1,8 @@
-@variants hover, group-hover {
-  .rotate-45 {
-    transform: rotate(45deg);
-  }
-}
-
-.transition-all-300 {
-  transition: all .3s;
-}
 
 /* Height fix for anchors */
-
-a[id] {
-  @apply .-mt-8 .pt-8;
+html {
+  scroll-padding-top: theme('spacing.8');
 }
-
 
 /*
  * Adapted from animate.css (https://github.com/daneden/animate.css/)
@@ -39,11 +28,4 @@ a[id] {
 
 .fade-in {
   animation-name: fade-in;
-}
-
-
-@variants hover, group-hover {
-  .rotate-45 {
-    transform: rotate(45deg);
-  }
 }
